kubernetes/ingress-res.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cc-ingress-ressource
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: frontend.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
  - host: backend.local
    http:
      paths:
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000
  - host: backend2.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend2
            port:
              number: 5001
